Fixed movie info align on movie page

--- a/client/web/static/css/movie.css
+++ b/client/web/static/css/movie.css
@@ -103,6 +103,7 @@ h3 {
 	display: flex;
 	flex-direction: column;
 	gap: 15px;
+	width: 100%;
 }
 
 /* buttons for external link, star, want and watched */
